--- a/biz-update-meal.html
+++ b/biz-update-meal.html
@@ -43,11 +43,12 @@ h3 {
 .btn {
   background-color: var(--primary-color);
   border: none;
-    font-size: 120%;
+  font-size: 120%;
 }
 .btn:hover {
   background-color: var(--primary-color-dark);
 }
+                    #submit { color: white; }
 </style>
     </head>
 
