--- a/list.html
+++ b/list.html
@@ -54,6 +54,9 @@
         .stock-num {
             font-size: 200%;
         }
+        a:focus {
+            text-decoration: none;
+        }
         </style>
     </head>
 
