--- a/restaurant-view.html
+++ b/restaurant-view.html
@@ -52,6 +52,7 @@ body {
 }
 .list-group-item {
   color: black;
+}
 .row {
     margin-right: 0px;
     margin-left: 0px;
@@ -65,6 +66,8 @@ body {
     font-size: 200%;
 }
 
+a:focus {
+    text-decoration: none;
 }
 
 </style>
