change rest view page title

--- a/restaurant-view.html
+++ b/restaurant-view.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
 
-        <title>Restaurant Name</title>
+        <title>萌茶 - Wai Mai</title>
 
         <meta name="keywords" content="chinese food, CMU, wai mai" />
         <meta name="author" content="Wai Mai Co">
