fix link styling

--- a/list.html
+++ b/list.html
@@ -57,6 +57,9 @@
         a:focus {
             text-decoration: none;
         }
+        a:hover {
+            text-decoration: none;
+        }
         </style>
     </head>
 
